2001-08-16  Sam Steingold  <sds@gnu.org>

	* install.lisp (bat-file): use registry to get the "Common
	Desktop" location

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/acgeneral.m4 (AC_MSG_RESULTPROTO): Remove macro.
	(AC_LANG_EXTERN): Move to aclocal.m4.
	* autoconf/aclocal.m4 (AC_LANG_EXTERN): Moved here from acgeneral.m4.
	(CL_PROTO): Use AC_MSG_RESULT directly, instead of AC_MSG_RESULTPROTO.
	(CL_SILENT): No need to pushdef AC_MSG_RESULTPROTO.

2001-08-16  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble): if a form is not a lambda form,
	prepend lambda before coercing to function

2001-08-15  Sam Steingold  <sds@gnu.org>

	* utils/gcc-cccp/Makefile.* (clean): new target
	* utils/gcc-cccp/Makefile (clean): new target
	adapted for CYGWIN/MINGW compilation
	* utils/gcc-cccp/cccp.c: made compilable under CYGWIN/MINGW:
	(stdlib.h, string.h, errno.h): include
	(max): define only if not yet defined
	(sys_nerr, sys_errlist): do not use on CYGWIN/MINGW, use strerror()
	code clean-up: added prototypes, fixed warnings and...
	(fancy_abort): removed (unused)
	(pipe_closed): ifndef _WIN32
	(fancy_abort): turned into a macro
	(grow_outbuf): void
	(expand_to_temp_buffer): do not return a local var
	fixed a show-stopper bug:
	(rescan): `obufp_before_macroname' is on the top level now
	(RECACHE): update `obufp_before_macroname'

2001-08-15  Sam Steingold  <sds@gnu.org>

	MT-safety: remove a static variable
	* io.d (circle_p): return a boolean and take a circle_info_t* arg
	(pr_circle): info is not a pointer now; pass it to circle_p()
	(pr_cons): pass NULL to circle_p()

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* sequence.d (seq_check_index): Remove typdescr argument. Use index,
	not STACK_0. Fix fehler_index_range argument. Add documentation.
	(ELT): Update.
	(SYSTEM::%SETELT): Update.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* pathname.d (legal_namechar): Treat ' ' as valid and '"' as invalid.
