@@ -1,4 +1,9 @@
 2001-08-16  Sam Steingold  <sds@gnu.org>
+	    Bruno Haible  <haible@clisp.cons.org>
+
+	* pathname.d (PARSE-NAMESTRING): check CONSP before CAR & CDR
+
+2001-08-16  Sam Steingold  <sds@gnu.org>
 
 	* install.lisp (bat-file): use registry to get the "Common
 	Desktop" location
